@@ -1,3 +1,8 @@
+2013-01-11 Molnar Karoly <molnarkaroly AT users.sf.net>
+
+	* support/scripts/mcs51-disasm.pl: More control characters are recognized.
+	  Refinement the align of explanations.
+
 2013-01-11 Erik Petrich <epetrich AT ivorytower.norman.ok.us>
 
 	* src/hc08/main.c: Nearly exact instruction sizes for peephole
